<resources>
    <string name="app_name">Tasbeeh</string>
    <string name="title_activity_stats_activity">stats_activity</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="Zikr_1">الحمدللہ</string>
    <string name="Zikr_2">تکبیر</string>
    <string name="Zikr_3">تسبیح</string>
    <string name="Zikr_4">استغفار</string>
    <string name="Zikr_5">آیت الکرسی</string>
    <string name="Zikr_6">درود ابراھیم</string>
    <string name="Zikr_7">حسبی اللَّهُ</string>
    <string name="Zikr_8">کلمہ تمجید</string>
    <string name="Zikr_9">کلمہ توحید</string>
    <string name="Zikr_10">کلمہ طیبہ</string>
    <string name="Zikr_11">لا حول</string>
    <string name="Zikr_12">لاالہ</string>
    <string name="Zikr_13">سبحان الل وبحمدہ</string>
    <string name="Zikr_14">اللہ</string>
    <string name="Zikr_15">الرَّحْمَنُ</string>
    <string name="Zikr_16">الرَّحِيمُ</string>
    <string name="Zikr_17">الْمَلِكُ</string>
    <string name="Zikr_18">الْقُدُّوسُ</string>
    <string name="Zikr_19">السَّلاَمُ</string>
    <string name="Zikr_20">الْمُؤْمِنُ</string>
    <string name="Zikr_21">الْمُهَيْمِنُ</string>
    <string name="Zikr_22">الْعَزِيزُ</string>
    <string name="Zikr_23">الْجَبَّارُ</string>
    <string name="Zikr_24">الْمُتَكَبِّرُ</string>
    <string name="Zikr_25">الْخَالِقُ</string>
    <string name="Zikr_26">الْبَارِئُ</string>
    <string name="Zikr_27">الْمُصَوِّرُ</string>
    <string name="Zikr_28">الْغَفَّارُ</string>
    <string name="Zikr_29">الْقَهَّارُ</string>
    <string name="Zikr_30">الْوَهَّابُ</string>
    <string name="Zikr_31">الرَّزَّاقُ</string>
    <string name="Zikr_32">الْفَتَّاحُ</string>
    <string name="Zikr_33">اَلْعَلِيْمُ</string>
    <string name="Zikr_34">الْقَابِضُ</string>
    <string name="Zikr_35">الْبَاسِطُ</string>
    <string name="Zikr_36">الْخَافِضُ</string>
    <string name="Zikr_37">الرَّافِعُ</string>
    <string name="Zikr_38">الْمُعِزُّ</string>
    <string name="Zikr_39">المُذِلُّ</string>
    <string name="Zikr_40">السَّمِيعُ</string>
    <string name="Zikr_41">الْبَصِيرُ</string>
    <string name="Zikr_42">الْحَكَمُ</string>
    <string name="Zikr_43">الْعَدْلُ</string>
    <string name="Zikr_44">اللَّطِيفُ</string>
    <string name="Zikr_45">الْخَبِيرُ</string>
    <string name="Zikr_46">الْحَلِيمُ</string>
    <string name="Zikr_47">الْعَظِيمُ</string>
    <string name="Zikr_48">الْغَفُورُ</string>
    <string name="Zikr_49">الشَّكُورُ</string>
    <string name="Zikr_50">الْعَلِيُّ</string>
    <string name="Zikr_51">الْكَبِيرُ</string>
    <string name="Zikr_52">الْحَفِيظُ</string>
    <string name="Zikr_53">المُقيِت</string>
    <string name="Zikr_54">الْحسِيبُ</string>
    <string name="Zikr_55">الْجَلِيلُ</string>
    <string name="Zikr_56">الْكَرِيمُ</string>
    <string name="Zikr_57">الرَّقِيبُ</string>
    <string name="Zikr_58">الْمُجِيبُ</string>
    <string name="Zikr_59">الْوَاسِعُ</string>
    <string name="Zikr_60">الْحَكِيمُ</string>
    <string name="Zikr_61">الْوَدُودُ</string>
    <string name="Zikr_62">الْمَجِيدُ</string>
    <string name="Zikr_63">الْبَاعِثُ</string>
    <string name="Zikr_64">الشَّهِيدُ</string>
    <string name="Zikr_65">الْحَقُّ</string>
    <string name="Zikr_66">الْوَكِيلُ</string>
    <string name="Zikr_67">الْقَوِيُّ</string>
    <string name="Zikr_68">الْمَتِينُ</string>
    <string name="Zikr_69">الْوَلِيُّ</string>
    <string name="Zikr_70">الْحَمِيدُ</string>
    <string name="Zikr_71">الْمُحْصِي</string>
    <string name="Zikr_72">الْمُبْدِئُ</string>
    <string name="Zikr_73">الْمُعِيدُ</string>
    <string name="Zikr_74">الْمُحْيِي</string>
    <string name="Zikr_75">اَلْمُمِيتُ</string>
    <string name="Zikr_76">الْحَيُّ</string>
    <string name="Zikr_77">الْقَيُّومُ</string>
    <string name="Zikr_78">الْوَاجِدُ</string>
    <string name="Zikr_79">الْمَاجِدُ</string>
    <string name="Zikr_80">الْواحِدُ</string>
    <string name="Zikr_81">اَلاَحَدُ</string>
    <string name="Zikr_82">الصَّمَدُ</string>
    <string name="Zikr_83">الْقَادِرُ</string>
    <string name="Zikr_84">الْمُقْتَدِرُ</string>
    <string name="Zikr_85">الْمُقَدِّمُ</string>
    <string name="Zikr_86">الْمُؤَخِّرُ</string>
    <string name="Zikr_87">الأوَّلُ</string>
    <string name="Zikr_88">الآخِرُ</string>
    <string name="Zikr_89">الظَّاهِرُ</string>
    <string name="Zikr_90">الْبَاطِنُ</string>
    <string name="Zikr_91">الْوَالِي</string>
    <string name="Zikr_92">الْمُتَعَالِي</string>
    <string name="Zikr_93">الْبَرُّ</string>
    <string name="Zikr_94">التَّوَابُ</string>
    <string name="Zikr_95">الْمُنْتَقِمُ</string>
    <string name="Zikr_96">العَفُوُّ</string>
    <string name="Zikr_97">الرَّؤُوفُُ</string>
    <string name="Zikr_98">مَالِكُ الْمُلْكِ</string>
    <string name="Zikr_99">ذُوالْجَلاَلِ وَالإكْرَامِ</string>
    <string name="Zikr_100">الْمُقْسِطُ</string>
    <string name="Zikr_101">الْجَامِعُ</string>
    <string name="Zikr_102">الْغَنِيُّ</string>
    <string name="Zikr_103">الْمُغْنِي</string>
    <string name="Zikr_104">اَلْمَانِعُ</string>
    <string name="Zikr_105">الضَّارَّ</string>
    <string name="Zikr_106">النَّافِعُ</string>
    <string name="Zikr_107">النُّورُ</string>
    <string name="Zikr_108">الْهَادِي</string>
    <string name="Zikr_109">الْبَدِيعُ</string>
    <string name="Zikr_110">اَلْبَاقِي</string>
    <string name="Zikr_111">الْوَارِثُ</string>
    <string name="Zikr_112">الرَّشِيدُُ</string>
    <string name="Zikr_113">الصَّبُورُ</string>
    <string name="Zikr_114">أسماء الحسنى</string>
    <string name="english_Zikr_1">Al-humd-Lilah</string>
    <string name="english_Zikr_2">Takbeer</string>
    <string name="english_Zikr_3">Allah</string>
    <string name="english_Zikr_4">Astaghfar</string>
    <string name="english_Zikr_5">Ayat-ul-Kursi</string>
    <string name="english_Zikr_6">Durood</string>
    <string name="english_Zikr_7">Hasbi-Allah</string>
    <string name="english_Zikr_8">Tamjeed</string>
    <string name="english_Zikr_9">Tauheed</string>
    <string name="english_Zikr_10">Kalma-Tayyiba</string>
    <string name="english_Zikr_11">Lahawla-Wala</string>
    <string name="english_Zikr_12">La-ilaha-il-Allah</string>
    <string name="english_Zikr_13">SubhanAllah-Wabihamdi</string>
    <string name="english_Zikr_14">Tasbeeh</string>
    <string name="english_Zikr_15">Al-humd-Lilah</string>
    <string name="english_Zikr_16">Takbeer</string>
    <string name="english_Zikr_17">Allah</string>
    <string name="english_Zikr_18">Astaghfar</string>
    <string name="english_Zikr_19">Ayat-ul-Kursi</string>
    <string name="english_Zikr_20">Durood</string>
    <string name="english_Zikr_21">Hasbi-Allah</string>
    <string name="english_Zikr_22">Tamjeed</string>
    <string name="english_Zikr_23">Tauheed</string>
    <string name="english_Zikr_24">Kalma-Tayyiba</string>
    <string name="english_Zikr_25">Lahawla-Wala</string>
    <string name="english_Zikr_26">La-ilaha-il-Allah</string>
    <string name="english_Zikr_27">SubhanAllah-Wabihamdi</string>
    <string name="english_Zikr_28">Tasbeeh</string>
    <string name="english_Zikr_29">Al-humd-Lilah</string>
    <string name="english_Zikr_30">Takbeer</string>
    <string name="english_Zikr_31">Allah</string>
    <string name="english_Zikr_32">Astaghfar</string>
    <string name="english_Zikr_33">Ayat-ul-Kursi</string>
    <string name="english_Zikr_34">Durood</string>
    <string name="english_Zikr_35">Hasbi-Allah</string>
    <string name="english_Zikr_36">Tamjeed</string>
    <string name="english_Zikr_37">Tauheed</string>
    <string name="english_Zikr_38">Kalma-Tayyiba</string>
    <string name="english_Zikr_39">Lahawla-Wala</string>
    <string name="english_Zikr_40">La-ilaha-il-Allah</string>
    <string name="english_Zikr_41">SubhanAllah-Wabihamdi</string>
    <string name="english_Zikr_42">Tasbeeh</string>
    <string name="english_Zikr_43">Al-humd-Lilah</string>
    <string name="english_Zikr_44">Takbeer</string>
    <string name="english_Zikr_45">Allah</string>
    <string name="english_Zikr_46">Astaghfar</string>
    <string name="english_Zikr_47">Ayat-ul-Kursi</string>
    <string name="english_Zikr_48">Durood</string>
    <string name="english_Zikr_49">Hasbi-Allah</string>
    <string name="english_Zikr_50">Tamjeed</string>
    <string name="english_Zikr_51">Tauheed</string>
    <string name="english_Zikr_52">Kalma-Tayyiba</string>
    <string name="english_Zikr_53">Lahawla-Wala</string>
    <string name="english_Zikr_54">La-ilaha-il-Allah</string>
    <string name="english_Zikr_55">SubhanAllah-Wabihamdi</string>
    <string name="english_Zikr_56">Tasbeeh</string>
    <string name="english_Zikr_57">Al-humd-Lilah</string>
    <string name="english_Zikr_58">Takbeer</string>
    <string name="english_Zikr_59">Allah</string>
    <string name="english_Zikr_60">Astaghfar</string>
    <string name="english_Zikr_61">Ayat-ul-Kursi</string>
    <string name="english_Zikr_62">Durood</string>
    <string name="english_Zikr_63">Hasbi-Allah</string>
    <string name="english_Zikr_64">Tamjeed</string>
    <string name="english_Zikr_65">Tauheed</string>
    <string name="english_Zikr_66">Kalma-Tayyiba</string>
    <string name="english_Zikr_67">Lahawla-Wala</string>
    <string name="english_Zikr_68">La-ilaha-il-Allah</string>
    <string name="english_Zikr_69">SubhanAllah-Wabihamdi</string>
    <string name="english_Zikr_70">Tasbeeh</string>
    <string name="english_Zikr_71">Al-humd-Lilah</string>
    <string name="english_Zikr_72">Takbeer</string>
    <string name="english_Zikr_73">Allah</string>
    <string name="english_Zikr_74">Astaghfar</string>
    <string name="english_Zikr_75">Ayat-ul-Kursi</string>
    <string name="english_Zikr_76">Durood</string>
    <string name="english_Zikr_78">Hasbi-Allah</string>
    <string name="english_Zikr_79">Tamjeed</string>
    <string name="english_Zikr_80">Tauheed</string>
    <string name="english_Zikr_81">Kalma-Tayyiba</string>
    <string name="english_Zikr_82">Lahawla-Wala</string>
    <string name="english_Zikr_83">La-ilaha-il-Allah</string>
    <string name="english_Zikr_84">SubhanAllah-Wabihamdi</string>
    <string name="english_Zikr_85">Tasbeeh</string>
    <string name="english_Zikr_86">Al-humd-Lilah</string>
    <string name="english_Zikr_87">Takbeer</string>
    <string name="english_Zikr_88">Allah</string>
    <string name="english_Zikr_89">Astaghfar</string>
    <string name="english_Zikr_90">Ayat-ul-Kursi</string>
    <string name="english_Zikr_91">Durood</string>
    <string name="english_Zikr_92">Hasbi-Allah</string>
    <string name="english_Zikr_93">Tamjeed</string>
    <string name="english_Zikr_94">Tauheed</string>
    <string name="english_Zikr_95">Kalma-Tayyiba</string>
    <string name="english_Zikr_96">Lahawla-Wala</string>
    <string name="english_Zikr_97">La-ilaha-il-Allah</string>
    <string name="english_Zikr_98">SubhanAllah-Wabihamdi</string>
    <string name="english_Zikr_99">Tasbeeh</string>
    <string name="english_Zikr_100">Al-humd-Lilah</string>
    <string name="english_Zikr_101">Takbeer</string>
    <string name="english_Zikr_102">Allah</string>
    <string name="english_Zikr_103">Astaghfar</string>
    <string name="english_Zikr_104">Ayat-ul-Kursi</string>
    <string name="english_Zikr_105">Durood</string>
    <string name="english_Zikr_106">Hasbi-Allah</string>
</resources>